--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Version 3.12.0 released 2017-05-07
+
+* Released from travis
+
 Version 3.11.0 released 2017-05-07
 
 * First release of fork validjson
